0.1.3
- Bug when the movie is in the movie library and was using filename instead.
- Added year for better searching when the movie is in the library. (Example: Sin City)
0.1.2
- Release pattern tweak for releases with a "slash" in-between words.
- Added Debug Mode in configurations for better help to failures (Mafarricos)
- Code cleanup (Mafarricos)
0.1.1
- Added a last resort option to search for filename or title, configure in advanced options of the add-on.
0.1.0
- Fix the decoding BUG in Raspberry Pi (Linux and Windows have different behaviours).
- New pattern for the last resort search to check if it's a movie or tvshow.
0.0.9
- Account verification added.
0.0.8
- Fixed more Unicode issues.
0.0.7
- Fixed a bug that prevents searching all chosen subtitle languages.
- Improved search algorithm for library TVSHOWS and MOVIES.
- Added Portuguese (Brazil) missing strings.xml.
0.0.6
- Added new pattern to find releases with spaces instead of dots (please start using dots in the release description).
- If there's no match with the patterns when searching for releases it will put the full description.
- Fix unicode issue when searching and the interface was set to Portuguese.
- Last resort search will always be by title if filename and parent folder fails.
0.0.5
- Improved SYNC matching REGEX.
- Fixed a missing string in all languages.
0.0.4
- Added Parent Folder search and sync matching. Choose in addon settings AUTO or OFF. AUTO checks if parent folder is a release and if true it will be used for search and sync.
- Reviewed Release pattern for better Description display.
- Improved SYNC matching.
0.0.3
- Added Release pattern for better Description display. Now you can choose Full Description or Release only Description (Default) on addon settings!
- Some fixes and changes on the code.
0.0.2
- Improved search code, we always depend on the site search...
- Manual search fully working.
- Improved scrapping on the description.
- Improved Sync results.
0.0.1